--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,8 @@
-[tool:pytest]
+[pytest]
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --tb=short
+norecursedirs = hyperion
+addopts = tests/ -v --tb=short --ignore=hyperion
 asyncio_mode = auto
